# mpd-notification

./: Cargo.toml  README.md  config.def.h  mpd-notification.c
src/: main.rs
